--- a/src/components/Shoop/Shop.css
+++ b/src/components/Shoop/Shop.css
@@ -2,3 +2,9 @@
   display: grid;
   grid-template-columns: 4fr 1fr;
 }
+.product-container{
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-gap: 45px;
+  padding: 20px;
+}
