--- a/src/components/Cart/Cart.css
+++ b/src/components/Cart/Cart.css
@@ -1,3 +1,7 @@
+.cart{
+  position: sticky;
+  top: 0;
+}
 .order-summary{
   font-family: 'Lato';
   font-style: normal;
@@ -5,4 +9,17 @@
   font-size: 30px;
   line-height: 30px;
   text-align: center;
+}
+.inner-cart{
+  font-family: 'Lato';
+font-style: normal;
+font-weight: 500;
+font-size: 20px;
+line-height: 20px;
+letter-spacing: 0.005em;
+color: #2A414F;
+margin-left: 25px;
+}
+.grand-total{
+  font-size: 25px;
 }
