cart item clear button added

--- a/src/components/Cart/Cart.css
+++ b/src/components/Cart/Cart.css
@@ -23,3 +23,16 @@ margin-left: 25px;
 .grand-total{
   font-size: 25px;
 }
+.cart-clear-btn{
+  border: none;
+  padding: 10px 20px;
+  background: #FF3030;
+  color: white;
+  font-size: 20px;
+  border-radius: 10px;
+  cursor: pointer;
+}
+.cart-clear{
+  text-align: center;
+  margin: 30px;
+}
